--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,20 @@ dist
 
 # TernJS port file
 .tern-port
+
+
+# Ignore python stuff
+*.pyc
+*.pyo
+build/
+dist/
+.installed.cfg
+bin
+develop-eggs
+dist
+downloads
+eggs
+parts
+src/*.egg-info
+lib
+lib64
